[package]
name = "day24"
version = "0.1.0"
authors = ["John Hungerford <jhungerford@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
lazy_static = "1.4.0"
itertools = "0.10.1"
rayon = "1.5.1"
